== 1.3.0 / ??

* N major enhancements:
  * Added darcs support.  Patch #14141 by Brian Palmer.
  * Added merb support.  Patch #17455 by Jamie Macey.
* N minor enhancements:
  * Added #role toplevel method, similar to #namespace.
  * Mercurial now automatically initializes the repository.  Patch #17429 by
    Jamie Macey.
  * Basic passenger support.  Patch 20743 by Alan Harper.
  * Split shared symlink creation to a separate task.  Patch #18158 by Steve
    Purcell.
* N bug fixes:
  * SSH flags are now an Array for proper inclusion in the command.  Patch
    #19513 by Guillaume Pierronnet.

== 1.1.1 / 2008-01-14

* 5 major enhancements:
  * Support for Rake 0.8. Should still work for Rake 0.7.
  * Added git support (contributed by Garry Dolley).
    * Reviewed for accuracy by Evan Phoenix.
  * Added lighttpd.rb
  * Added automatic client setup for perforce.
  * Added mercurial SCM support patch. Closes ticket 13475.
* 6 minor enhancements:
  * Added #put method that wraps up Tempfile/rsync pattern.
  * Added automatic p4 client setup for perforce.
  * Added vladdemo.sh
  * Moved everything over to put.
  * Moved generic app setup to core from mongrel.
  * Parameterized 'head' into 'revision' variable (with head as default).
* 1 bug fix
  * Fixed cleanup to actually properly clean up.

== 1.1.0 / 2007-09-12

* 3 major enhancements:
  * Vlad.load now takes a hash of recipe overrides, eg: Vlad.load :web => :nginx.
    See rdoc for defaults.
  * Removed vlad_tasks.rb and split into vlad/apache.rb, vlad/mongrel.rb,
    and vlad/core.rb.
  * The flog ratio between capistrano+deps / vlad+deps is pi (or, damn close)!
* 12 minor enhancements:
  * Added $TRACE to make it more available and cleaner to read.
  * Added :svn_cmd variable.
  * Added Rake.clear_tasks *str_or_regexp
  * Added debug and mana_from_heaven tasks to Rakefile.
  * Added more documentation.
  * Added :rsync_cmd and :rsync_flags.
  * Added :ssh_cmd and :ssh_flags.